* Thu Aug 28 08:23:23 2003, pabs <pabs@pablotron.org>
  * added localfark.sql
  * README: added note about localfark.sql

* Thu Aug 28 08:23:41 2003, pabs <pabs@pablotron.org>
  * released 0.1.1

* Thu Aug 28 08:27:41 2003, pabs <pabs@pablotron.org>
  * initial cvs import

* Thu Aug 28 08:32:45 2003, pabs <pabs@pablotron.org>
  * config/fark.rb: change db username and pass to INSERT_* equiv
  * config/totalfark.rb: ditto