@@ -7,11 +7,21 @@ body {
   font-size: 12px;
 }
 
+a { 
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/******************/
+/* titlebar style */
+/******************/
 .titlebar {
   margin: 0px;
-  margin-bottom: 10px;
   padding: 5px;
-  background-color: #eeeeee;
+  background-color: #ffffdd;
   border-bottom: 1px solid #111111;
   font-family: verdana, arial, helvetica, sans-serif;
   font-color: #111111;
@@ -22,10 +32,11 @@ body {
   padding: 0px;
   margin: 0px;
   font-family: verdana, arial, helvetica, sans-serif;
-  font-color: #111111;
+  color: #111111;
   font-weight: normal;
   font-size: 24px;
   letter-spacing: 10px;
+  text-decoration: none;
 }
 
 .subtitle {
@@ -37,6 +48,24 @@ body {
   font-size: 12px;
 }
 
+/*****************/
+/* sortbar style */
+/*****************/
+.sortbar {
+  margin: 0px;
+  margin-bottom: 10px;
+  padding: 5px;
+  background-color: #eeeeee;
+  border-bottom: 1px solid #111111;
+}
+
+#sortform {
+  margin: 0px;
+}
+
+/***************/
+/* entry style */
+/***************/
 .even-row {
   background: #eeeeee;
 }
@@ -73,4 +102,16 @@ body {
 
 .desc-rejected {
   color: #800000;
+}
+
+/********************/
+/* page index style */
+/********************/
+.page-index {
+  font-size: 9px;
+  margin-top: 5px;
+  padding: 5px;
+  background-color: #eeeeee;
+  border-top: 1px solid #111111;
+  
 }
